
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;




typedef struct TYPE_2__ TYPE_1__ ;


typedef int target ;
struct timeval {int tv_sec; scalar_t__ tv_usec; } ;
struct TYPE_2__ {scalar_t__ s_addr; } ;
struct sockaddr_in {int sin_port; TYPE_1__ sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int fd_set ;
typedef scalar_t__ SOCKET ;
typedef int DWORD ;


 int AF_INET ;
 int FD_SET (scalar_t__,int *) ;
 int FD_ZERO (int *) ;
 int FIONBIO ;
 int SOCK_STREAM ;
 int SOL_SOCKET ;
 int SO_ERROR ;
 int closesocket (scalar_t__) ;
 int connect (scalar_t__,struct sockaddr*,int) ;
 int getsockopt (scalar_t__,int ,int ,char*,int*) ;
 int htons (short) ;
 scalar_t__ inet_addr (char*) ;
 int ioctlsocket (scalar_t__,int ,int*) ;
 int select (scalar_t__,int ,int *,int ,struct timeval*) ;
 scalar_t__ socket (int ,int ,int ) ;

int
Make_Connection (char *address, int port, int timeout)
{
  struct sockaddr_in target;
  SOCKET s;
  int i;
  DWORD bf;
  fd_set wd;
  struct timeval tv;

  s = socket (AF_INET, SOCK_STREAM, 0);
  if (s < 0)
    return -1;

  target.sin_family = AF_INET;
  target.sin_addr.s_addr = inet_addr (address);
  if (target.sin_addr.s_addr == 0)
    {
      closesocket (s);
      return -2;
    }
  target.sin_port = htons ((short) port);
  bf = 1;
  ioctlsocket (s, FIONBIO, &bf);
  tv.tv_sec = timeout;
  tv.tv_usec = 0;
  FD_ZERO (&wd);
  FD_SET (s, &wd);
  connect (s, (struct sockaddr *) &target, sizeof (target));
  if ((i = select (s + 1, 0, &wd, 0, &tv)) == (-1))
    {
      closesocket (s);
      return -3;
    }
  if (i == 0)
    {
      closesocket (s);
      return -4;
    }
  i = sizeof (int);
  getsockopt (s, SOL_SOCKET, SO_ERROR, (char *) &bf, &i);
  if ((bf != 0) || (i != sizeof (int)))
    {
      closesocket (s);
      return -5;
    }
  ioctlsocket (s, FIONBIO, &bf);
  return s;
}
